--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,6 @@
 /.next/
 /out/
 
-# production
-/build
 
 # misc
 .DS_Store
@@ -34,3 +32,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+build/
+lib/
+ui-debug.log
+database-debug.log
